--- a/minv/inventory/templates/inventory/collection/result_list.html
+++ b/minv/inventory/templates/inventory/collection/result_list.html
@@ -31,6 +31,8 @@
 
   <button type="submit" class="btn btn-default" name="download_csv" value="true">Download as CSV</button>
 
+  <button type="submit" class="btn btn-default" name="download_filenames" value="true">Download Filenames</button>
+
   {{ result_list_form }}
   {% if not result_list %}
     The search returned no results.
