--- a/minv/inventory/templates/inventory/collection/search.html
+++ b/minv/inventory/templates/inventory/collection/search.html
@@ -53,6 +53,11 @@
       The search returned no results.
     {% else %}
       <table class="table table-striped table-condensed table-hover table-header-rotated">
+        <colgroup>
+          <col style="width: 30em">
+          <col style="width: 7em">
+          <col style="width: 13em">
+        </colgroup>
         <thead>
           <tr>
             <th>Location</th>
