--- a/minv/inventory/templates/inventory/extra/pagination.html
+++ b/minv/inventory/templates/inventory/extra/pagination.html
@@ -1,22 +1,48 @@
 <nav>
   <ul class="pagination">
-    {% if paginator.number > 2 %}
+    {% if page.number > 3 %}
       <li>
         <a href="#" data-page="1" aria-label="Previous">
           <span aria-hidden="true">&laquo;</span>
         </a>
       </li>
+      <li class="disabled">
+        <a>
+          <span aria-hidden="true">...</span>
+        </a>
+      </li>
     {% endif %}
-    {% if paginator.has_previous %}
-      <li><a href="#" data-page="{{ paginator.previous_page_number }}">{{ paginator.previous_page_number }}</a></li>
+
+    {% if page.has_previous and page.previous_page_number|add:"-1" > 0 %}
+      <li><a href="#" data-page="{{ page.previous_page_number|add:"-1" }}">{{ page.previous_page_number|add:"-1" }}</a></li>
     {% endif %}
-    <li class="active"><a href="#">{{ paginator.number }}<span class="sr-only">(current)</span></a></li>
-    {% if paginator.has_next %}
-      <li><a href="#" data-page="{{ paginator.next_page_number }}">{{ paginator.next_page_number }}</a></li>
+
+    {% if page.has_previous %}
+      <li><a href="#" data-page="{{ page.previous_page_number }}">{{ page.previous_page_number }}</a></li>
     {% endif %}
-    {% if paginator.has_next and paginator.next_page_number < paginator.paginator.num_pages %}
+
+    <li class="active">
+      <a href="#">{{ page.number }}<span class="sr-only">(current)</span></a>
+    </li>
+
+    {% if page.has_next %}
+      <li>
+        <a href="#" data-page="{{ page.next_page_number }}">{{ page.next_page_number }}</a>
+      </li>
+    {% endif %}
+
+    {% if page.has_next and page.next_page_number < page.paginator.num_pages %}
+      <li><a href="#" data-page="{{ page.next_page_number|add:"1" }}">{{ page.next_page_number|add:"1" }}</a></li>
+    {% endif %}
+
+    {% if page.has_next and page.next_page_number|add:"1" < page.paginator.num_pages %}
+    <li class="disabled">
+      <a>
+        <span aria-hidden="true">...</span>
+      </a>
+    </li>
     <li>
-      <a href="#" data-page="{{ paginator.paginator.num_pages }}" aria-label="Next">
+      <a href="#" data-page="{{ page.paginator.num_pages }}" aria-label="Next">
         <span aria-hidden="true">&raquo;</span>
       </a>
     </li>
