--- a/minv/inventory/templates/inventory/collection/search.html
+++ b/minv/inventory/templates/inventory/collection/search.html
@@ -75,7 +75,9 @@
             <td>{{ values.count }}</td>
             <td>{{ values.volume | sizeof_fmt }}{% if values.volume %} <small>({{ values.volume }} Bytes)</small>{% endif %}</td>
             <td>
-              <button type="submit" class="btn btn-default btn-xs" name="result_list_location" value="{{ location.id }}" onclick="this.form.action='{% url 'inventory:collection:result_list' mission=collection.mission file_type=collection.file_type %}'">Show Result List</button>
+              <div class="btn-group">
+                <button type="submit" class="btn btn-default btn-xs" name="result_list_location" value="{{ location.id }}" onclick="this.form.action='{% url 'inventory:collection:result_list' mission=collection.mission file_type=collection.file_type %}'">Show Result List</button>
+              </div>
             </td>
           </tr>
         {% endfor %}
