Improving task list

--- a/minv/tasks/templates/tasks/job.html
+++ b/minv/tasks/templates/tasks/job.html
@@ -24,7 +24,7 @@
 
 <table class="table table-hover table-bordered">
   <tr><td>ID</td><td>{{ job.id }}</td></tr>
-  <tr><td>Name</td><td>{{ job.name }}</td></tr>
+  <tr><td>Name</td><td>{{ job.task }}</td></tr>
   <tr>
     <td>Arguments</td>
     <td>
