--- a/minv/tasks/templates/tasks/job_list.html
+++ b/minv/tasks/templates/tasks/job_list.html
@@ -1,5 +1,7 @@
 {% extends "minv/base.html" %}
 
+{% load inventory_extras %}
+
 {% block head %}
 {{ block.super }}
 {{ search_form.media }}
@@ -24,28 +26,55 @@
       {{ field }}
     </div>
     {% endfor %}
+
+    {{ pagination_form }}
+
     <button type="submit" class="btn btn-default">Filter</button>
+
+    <h2>Scheduled:</h2>
+    <table class="table table-hover table-condensed table-bordered table-striped">
+      <tr>
+        <th>Name</th>
+        <th>Scheduled</th>
+        <th>Mission</th>
+        <th>File Type</th>
+        <th>URL</th>
+      </tr>
+      {% for scheduled_job in scheduled_jobs %}
+      <tr>
+        <td>{{ scheduled_job.task }}</td>
+        <td>{{ scheduled_job.when|date:'Y-m-d H:i' }}</td>
+        <td>{{ scheduled_job.argument_values.mission }}</td>
+        <td>{{ scheduled_job.argument_values.file_type }}</td>
+        <td>{{ scheduled_job.argument_values.url }}</td>
+      </tr>
+      {% endfor %}
+    </table>
+
+    <h2>Current jobs:</h2>
+    <table class="table table-hover table-condensed table-bordered table-striped">
+      <tr>
+        <th>Name</th>
+        <th>Start time</th>
+        <th>End time</th>
+        <th>Run time</th>
+        <th>Status</th>
+      </tr>
+      {% for job in jobs %}
+      <tr>
+        <td><a href="{% url 'tasks:job' job_id=job.id %}">{{ job.task }}</a></td>
+        <td>{{ job.start_time|date:'Y-m-d H:i' }}</td>
+        <td>{{ job.end_time|date:'Y-m-d H:i' }}</td>
+        <td>{% if job.run_time %}{{ job.run_time }}{% else %}-{% endif %}</td>
+        <td class="{% if job.status == 'pending' %}{% elif job.status == 'running' %}info{% elif job.status == 'finished' %}success{% elif job.status == 'failed' %}danger{% endif %}"  style="text-align: center;"><span class="glyphicon glyphicon-{% if job.status == 'pending' %}pause{% elif job.status == 'running' %}play{% elif job.status == 'finished' %}ok{% elif job.status == 'failed' %}ban-circle{% endif %}" aria-hidden="true"></span></td>
+      </tr>
+      {% endfor %}
+    </table>
+
+    {% render_pagination jobs %}
+
   </form>
 </nav>
-
-<table class="table table-hover table-condensed table-bordered table-striped">
-  <tr>
-    <th>Name</th>
-    <th>Start time</th>
-    <th>End time</th>
-    <th>Run time</th>
-    <th>Status</th>
-  </tr>
-  {% for job in jobs %}
-  <tr>
-    <td><a href="{% url 'tasks:job' job_id=job.id %}">{{ job.task }}</a></td>
-    <td>{{ job.start_time|date:'Y-m-d H:i' }}</td>
-    <td>{{ job.end_time|date:'Y-m-d H:i' }}</td>
-    <td>{% if job.run_time %}{{ job.run_time }}{% else %}-{% endif %}</td>
-    <td class="{% if job.status == 'pending' %}{% elif job.status == 'running' %}info{% elif job.status == 'finished' %}success{% elif job.status == 'failed' %}danger{% endif %}"  style="text-align: center;"><span class="glyphicon glyphicon-{% if job.status == 'pending' %}pause{% elif job.status == 'running' %}play{% elif job.status == 'finished' %}ok{% elif job.status == 'failed' %}ban-circle{% endif %}" aria-hidden="true"></span></td>
-  </tr>
-  {% endfor %}
-</table>
 
 <ol class="breadcrumb">
   <li><a href="{% url 'root' %}">Home</a></li>
