Fixing issue in Job list and Job details views. Implemented restarting of jobs.

--- a/minv/tasks/templates/tasks/job_list.html
+++ b/minv/tasks/templates/tasks/job_list.html
@@ -29,6 +29,7 @@
 
     {{ pagination_form }}
 
+    <input type="hidden" name="page" value="1">
     <button type="submit" class="btn btn-default">Filter</button>
 
     <h2>Current jobs:</h2>
