--- a/minv/tasks/templates/tasks/job.html
+++ b/minv/tasks/templates/tasks/job.html
@@ -17,7 +17,10 @@
   <form method="post" action="{% url 'tasks:job' job_id=job.id %}" class="navbar-form navbar-left" role="search">
     {% csrf_token %}
     {% for short, long in form.action.field.choices %}
+    {% if short == "restart" and not is_restartable %}
+    {% else %}
     <button name="action" value="{{ short }}" class="btn btn-default">{{ long }}</button>
+    {% endif %}
     {% endfor %}
   </form>
 </nav>
