--- a/minv/inventory/templates/inventory/collection/configuration.html
+++ b/minv/inventory/templates/inventory/collection/configuration.html
@@ -26,36 +26,43 @@
 
   {% for url, mapping_formset in mapping_formsets %}
 
-    {% if not url %}
-    <h2>Default Harvesting Metadata mapping</h2>
-    {% else %}
-    <h2>Harvesting Metadata mapping for {{ url }}</h2>
-    {% endif %}
     {{ mapping_formset.management_form }}
 
-    <table class="table">
-      <thead>
-      {% for form in mapping_formset.forms %}
-        {% if forloop.first %}
-          {% for field in form %}
-            <th>{{ field.label_tag }}</th>
-          {% endfor %}
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        {% if not url %}
+        Default Harvesting Metadata mapping
+        {% else %}
+        Harvesting Metadata mapping for <b>{{ url }}</b>
         {% endif %}
-      </thead>
-      <tbody>
-        <tr>
-          {% for field in form %}
-            <td>{{ field }}{% for error in field.errors %}
-              <span class="help-block col-xs-offset-2">{{ error }}</span>
-            {% endfor %}</td>
+      </div>
+    
+      <div class="panel-body">
+        <table class="table">
+          <thead>
+          {% for form in mapping_formset.forms %}
+            {% if forloop.first %}
+              {% for field in form %}
+                <th>{{ field.label_tag }}</th>
+              {% endfor %}
+            {% endif %}
+          </thead>
+          <tbody>
+            <tr>
+              {% for field in form %}
+                <td>{{ field }}{% for error in field.errors %}
+                  <span class="help-block col-xs-offset-2">{{ error }}</span>
+                {% endfor %}</td>
+              {% endfor %}
+            </tr>
           {% endfor %}
-        </tr>
-      {% endfor %}
-      <tr class="insert-row-before">
-        <td><a href="#" class="add-another-mapping">Add another mapping</a></td>
-      </tr>
-      </tbody>
-    </table>
+          <tr class="insert-row-before">
+            <td><a href="#" class="add-another-mapping">Add another mapping</a></td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
 
     <script type="text/template" id="row-template-{{ forloop.counter0 }}">
       <tr>
@@ -73,7 +80,7 @@
             $(
               $("#row-template-{{ forloop.counter0 }}")
                 .html()
-                .replace(/__prefix__/g, $("table:eq({{ forloop.counter0 }}) tbody tr").length - 1)
+                .replace(/__prefix__/g, $("table:eq({{ forloop.counter0 }}) tr").length - 1)
             ).insertBefore("table:eq({{ forloop.counter0 }}) .insert-row-before");
             $("#id_{{ mapping_formset.prefix }}-TOTAL_FORMS").val(parseInt($("#id_{{ mapping_formset.prefix }}-TOTAL_FORMS").val()) + 1);
           });
