--- a/minv/inventory/templates/inventory/collection/configuration.html
+++ b/minv/inventory/templates/inventory/collection/configuration.html
@@ -19,10 +19,12 @@
 <form action="{% url 'inventory:collection:configuration' mission=collection.mission file_type=collection.file_type %}" method="post" class="form-horizontal">
   {% csrf_token %}
 
+  <div class="form-group">
+    <button type="submit" class="btn btn-default btn-block">Save</button>
+  </div>
+
   <h2>Configuration</h2>
   {% render_form configuration_form %}
-
-
 
   {% for url, mapping_formset in mapping_formsets %}
 
@@ -90,9 +92,7 @@
   {% endfor %}
 
   <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-default">Save</button>
-    </div>
+    <button type="submit" class="btn btn-default btn-block">Save</button>
   </div>
 </form>
 
