--- a/minv/inventory/templates/inventory/collection/alignment.html
+++ b/minv/inventory/templates/inventory/collection/alignment.html
@@ -48,7 +48,7 @@
     {% else %}
       <p>Search hit {{ records.paginator.count }} records, showing {{ records|length }}.</p>
       <table class="table table-striped table-condensed table-hover table-header-rotated">
-       <colgroup>
+        <colgroup>
           <col style="width: auto;">
         {% for location in locations %}
           <col style="width: 50px">
@@ -73,8 +73,10 @@
             {% for checksum, exists in record.incidences %}
               <td class="mark-inside">
               {% if exists %}
-                {% if record.checksum_mismatch %}
+                {% if record.checksum_mismatch and checksum != None %}
                   <span class="glyphicon glyphicon-exclamation-sign warning" aria-hidden="true"></span>
+                {% elif checksum == None %}
+                  <span class="glyphicon glyphicon-question-sign info" aria-hidden="true"></span>
                 {% else %}
                   <span class="glyphicon glyphicon-ok ok" aria-hidden="true"></span>
                 {% endif %}
@@ -97,6 +99,24 @@
     </div>
   </div>
 </form>
+
+<script>
+  var hypothenuse = Math.max.apply(Math, $('.table-header-rotated th.rotate span').map(function() {
+    return this.offsetWidth;
+  }));
+  var angle = 60 * (Math.PI / 180);
+  var height = Math.sin(angle) * hypothenuse;
+  var width = Math.cos(angle) * hypothenuse;
+
+  $('.table-header-rotated th.rotate').each(function() {
+    $(this).css('height', height + 10 + 'px');
+  });
+
+  if (width > 150) {
+    $('colgroup col:last').css('width', width + 'px')
+  }
+
+</script>
 
 {% endblock %}
 
