--- a/minv/inventory/templates/inventory/collection/record.html
+++ b/minv/inventory/templates/inventory/collection/record.html
@@ -84,7 +84,13 @@
               <th>{% if field_id in differences %}<span class="glyphicon glyphicon-exclamation-sign warning" aria-hidden="true"></span> {% endif %}{{ field_name }}</th>
               {% if not field_id in differences %}
                 {% with records.0|get_display:field_id as field_value %}
-                <td>{% if field_value != None %}{{ field_value }}{% endif %}</td>
+                <td>
+                  {% if field_value != None %}
+                    {{ field_value }}
+                  {% else %}
+                    <small><i>no value</i></small>
+                  {% endif %}
+                </td>
                 {% endwith %}
               {% else %}
                 <td>
@@ -93,7 +99,13 @@
                     {% if record %}
                     <tr>
                       <th>{{ location }}</th>
-                      <td>{{ record | get_display:field_id }}</td>
+                      <td>
+                        {% if record|get:field_id != None %}
+                          {{ record | get_display:field_id }}
+                        {% else %}
+                          <small><i>no value</i></small>
+                        {% endif %}
+                      </td>
                     </tr>
                     {% endif %}
                   {% endfor %}
@@ -118,8 +130,8 @@
               {% endfor %}]'
               data-map-centres='[
               {% for location, record in locations.items %}
-                {% if record.footprint %}
-                  "{{ record.footprint }}"
+                {% if record.scene_centre %}
+                  "{{ record.scene_centre }}"
                 {% else %}
                   null
                 {% endif %}
