Swapping blue questionmarks with blue ticks.

--- a/minv/inventory/templates/inventory/collection/alignment.html
+++ b/minv/inventory/templates/inventory/collection/alignment.html
@@ -81,7 +81,7 @@
                 {% if record.checksum_mismatch and checksum != None %}
                   <span class="glyphicon glyphicon-exclamation-sign warning" aria-hidden="true"></span>
                 {% elif checksum == None %}
-                  <span class="glyphicon glyphicon-question-sign info" aria-hidden="true"></span>
+                  <span class="glyphicon glyphicon-ok info" aria-hidden="true"></span>
                 {% else %}
                   <span class="glyphicon glyphicon-ok ok" aria-hidden="true"></span>
                 {% endif %}
