--- a/minv/inventory/templates/inventory/collection/record.html
+++ b/minv/inventory/templates/inventory/collection/record.html
@@ -41,7 +41,7 @@
               {% if checksum_mismatch and record.checksum != None %}
               <span class="glyphicon glyphicon-exclamation-sign warning" aria-hidden="true"></span>
               {% elif record.checksum == None %}
-              <span class="glyphicon glyphicon-question-sign info" aria-hidden="true"></span>
+              <span class="glyphicon glyphicon-ok info" aria-hidden="true"></span>
               {% else %}
               <span class="glyphicon glyphicon-ok ok" aria-hidden="true"></span>
               {% endif %}
